--- a/templates/login.html
+++ b/templates/login.html
@@ -13,6 +13,7 @@
             </div>
             <div class="card-body p-4">
                 <form method="POST" action="{{ url_for('login') }}" class="needs-validation" novalidate>
+                    {{ form.csrf_token }}
                     <div class="mb-3">
                         <label for="username" class="form-label">Username</label>
                         <div class="input-group">
